# hackthe6ix

./: .gitignore  PRD.md  README.md  config.example.json  pyproject.toml
.github/workflows/: ci.yml
docs/: devpost.md  diagnostics.md  ide-mode.md
editors/vscode/: .vscodeignore  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json
editors/vscode/scripts/: stage-runtime.mjs
editors/vscode/src/: extension.ts
protocol/: ide-v1.schema.json
scripts/: chudvis-windows.ps1  chudvis-windows.sh  gazemotion-windows.ps1  gazemotion-windows.sh  install-vscode-extension.ps1  install-vscode-extension.sh  test-chudvis-wake-word-windows.ps1  test-chudvis-wake-word-windows.sh  test-chudvis-wake-word.py
src/chudvis/: __init__.py  __main__.py  app.py  cli.py
src/chudvis/actions/: base.py  pynput_adapter.py
src/chudvis/capture/: camera.py
src/chudvis/core/: config.py  controller.py  events.py  platform.py
src/chudvis/gaze/: features.py  model.py  training.py
src/chudvis/gestures/: __init__.py  engine.py  router.py
src/chudvis/ide/: adapter.py  app.py  controller.py  protocol.py  transport.py
src/chudvis/perception/: __init__.py  mediapipe_tracker.py  models.py
src/chudvis/speech/: dictation.py  realtime_voice.py  wake_word.py
src/chudvis/ui/: calibration.py  diagnostics.py
src/gazemotion/: __init__.py  __main__.py  app.py  cli.py
src/gazemotion/actions/: __init__.py  base.py  pynput_adapter.py
tests/: test_agent.py  test_agent_parser.py  test_calibration.py  test_camera.py  test_config.py  test_controller.py  test_controller_agent.py  test_diagnostics.py  test_dictation_elevenlabs.py  test_gaze.py  test_gaze_features.py  test_gesture_router.py  test_gestures.py  test_ide_app.py  test_ide_controller.py  test_ide_protocol.py  test_ide_transport.py  test_perception.py  test_platform.py  test_protocol_schema.py  test_realtime_voice.py  test_voice_out.py  test_wake_word.py  test_wellness.py  test_window.py
training/freesolo/: README.md  eval.jsonl  evaluate.py  generate_dataset.py  train.jsonl
(+84 files in other folders)
