[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "chudvis"
version = "0.1.0"
description = "Local gaze, gesture, and voice control for desktop navigation"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "mediapipe>=0.10.14,<0.11",
  "numpy>=1.24,<3",
  "opencv-contrib-python>=4.9,<6",
  "pynput>=1.7.7,<2",
]

[project.optional-dependencies]
voice = [
  "faster-whisper>=1.0,<2",
  "requests>=2.31,<3",
  "sentencepiece>=0.2,<1",
  "sherpa-onnx==1.13.4",
  "sherpa-onnx-bin==1.13.4",
  "sherpa-onnx-core==1.13.4",
  "sounddevice>=0.4.7,<1",
  "websocket-client>=1.8,<2",
]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
chudvis = "chudvis.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/chudvis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
files = ["src/chudvis"]
strict = true
ignore_missing_imports = true
